--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "url": "https://github.com/eliburgi/random-name.git"
     },
     "scripts": {
-        "test": "npm run test",
+        "test": "jest --coverage",
         "clean": "rmdir lib",
         "build": "npm run clean && npx tsc -p tsconfig.json && npx tsc -p tsconfig-cjs-json",
         "prepublish": "npm run build"
@@ -24,7 +24,10 @@
     ],
     "author": "Elias Burgstaller",
     "license": "MIT",
-    "dependencies": {
+    "devDependencies": {
+        "@types/jest": "^27.4.1",
+        "jest": "^27.5.1",
+        "ts-jest": "^27.1.4",
         "typescript": "^4.6.3"
     }
 }
