--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,8 +14,8 @@ jobs:
         with: 
           node-version: 12
       - run: npm install
+      - run: npm run build
       - run: npm run test
-      - run: npm run prepublish
       - uses: JS-DevTools/npm-publish@v1
         with: 
           token: ${{ secrets.NPM_TOKEN }}
