--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "test": "jest --coverage",
         "clean": "rm -rf lib",
-        "build": "npm run clean && npx tsc -p tsconfig.json && npx tsc -p tsconfig-cjs-json",
+        "build": "npm run clean && npx tsc -p tsconfig.json && npx tsc -p tsconfig-cjs.json",
         "prepublish": "npm run build"
     },
     "keywords": [
